# ChangeLog for sys-apps/file
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.277 2014/07/06 23:25:06 kumba Exp $

  06 Jul 2014; Joshua Kinard <kumba@gentoo.org> file-5.17.ebuild:
  Changed mips -> ~mips: we don't have a stable keyword anymore.

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> file-5.18-r1.ebuild,
  file-5.19.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

*file-5.19 (13 Jun 2014)

  13 Jun 2014; Lars Wendler <polynomial-c@gentoo.org> -file-5.18.ebuild,
  +file-5.19.ebuild:
  Version bump. Removed old.

  28 Apr 2014; Michał Górny <mgorny@gentoo.org> file-5.18-r1.ebuild,
  file-9999.ebuild:
  Replace multilib_build_binaries with multilib_is_native_abi, in order to put
  an end to the confusion introduced by having two functions, the proper one
  suggesting it is just for binaries.

  27 Mar 2014; Samuli Suominen <ssuominen@gentoo.org> file-5.18-r1.ebuild:
  Update blockers for libmagic.so* wrt #505936 by Graham Murray

*file-5.18-r1 (27 Mar 2014)

  27 Mar 2014; Mike Frysinger <vapier@gentoo.org> +file-5.18-r1.ebuild,
  file-9999.ebuild:
  Add multilib support.

*file-5.18 (26 Mar 2014)

  26 Mar 2014; Mike Frysinger <vapier@gentoo.org> +file-5.18.ebuild:
  Version bump.

  02 Mar 2014; Mike Frysinger <vapier@gentoo.org> file-5.17.ebuild,
  file-9999.ebuild:
  Mark arm64/m68k/mips/s390/sh stable.

  22 Feb 2014; Lars Wendler <polynomial-c@gentoo.org> -file-5.15.ebuild,
  -file-5.16.ebuild:
  Removed vulnerable versions.

  22 Feb 2014; Agostino Sarubbo <ago@gentoo.org> file-5.17.ebuild:
  Stable for sparc, wrt bug #501574

  20 Feb 2014; Akinori Hattori <hattya@gentoo.org> file-5.17.ebuild:
  ia64 stable wrt bug #501574

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> file-5.17.ebuild:
  Stable for ppc, wrt bug #501574

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> file-5.17.ebuild: