@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/file
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.277 2014/07/06 23:25:06 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.278 2014/09/07 18:55:10 floppym Exp $
+
+  07 Sep 2014; Mike Gilbert <floppym@gentoo.org> file-5.19.ebuild,
+  file-9999.ebuild:
+  Add python3.4.
 
   06 Jul 2014; Joshua Kinard <kumba@gentoo.org> file-5.17.ebuild:
   Changed mips -> ~mips: we don't have a stable keyword anymore.
